# vidmod

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  rustfmt.toml
examples/copy/: hashes.txt  manifest.yml  out.sum
examples/copy_convert/: manifest.yml  test.in
examples/image/: hashes.txt  manifest.yml
examples/syncextract/: hashes.txt  manifest.yml
examples/syncextract/in/: cvbs.data
vidmod-core/: Cargo.toml
vidmod-core/src/: lib.rs  main.rs
vidmod-core/src/spec/: manifest.rs  mod.rs
vidmod-core/tests/: nodegraph.rs  pipeline.rs
vidmod-core/tests/common/: mod.rs
vidmod-macros/: Cargo.toml
vidmod-macros/src/: lib.rs
vidmod-node/: Cargo.toml
vidmod-node/src/: frame.rs  lib.rs  limvecdeque.rs
vidmod-plugin/: Cargo.toml  build.rs
vidmod-plugin/src/: lib.rs
vidmod-tests/: Cargo.toml  build.rs
vidmod-tests/tests/: test_template
