[package]
name = "vidmod-core"
version = "0.1.0"
edition = "2018"
rust-version = "1.51"
description = "Core functionality and binary for vidmod"
repository = "https://github.com/vidmod/vidmod"
license = "MIT"

[dependencies]
anyhow = "1.0.55"
ndarray = "0.15.4"
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
vidmod-node = { version = "0.1.0", path = "../vidmod-node" }
vidmod-plugin = { version = "0.1.0", path = "../vidmod-plugin" }
