[package]
name = "vidmod-macros"
version = "0.1.0"
edition = "2018"
rust-version = "1.42"
description = "Macros to auto-implement vidmod node functionality"
repository = "https://github.com/vidmod/vidmod"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version="1.0.76", features=["full","extra-traits","parsing"] }
quote = "1.0.9"
proc-macro2 = "1.0"
