[package]
name = "vidmod-plugin"
version = "0.1.0"
edition = "2018"
rust-version = "1.51"
description = "Crate allowing vidmod to automatically find and use plugins"
repository = "https://github.com/vidmod/vidmod"
license = "MIT"

[dependencies]
lazy_static = "1.4.0"

vidmod-node = { version = "0.1.0", path = "../vidmod-node" }

vidmod-plugins-cvbs = { version = "0.1.0", path = "../vidmod-plugins/vidmod-plugins-cvbs" }
vidmod-plugins-core = { version = "0.1.0", path = "../vidmod-plugins/vidmod-plugins-core" }

[build-dependencies]
regex = "1"