[package]
name = "vidmod-tests"
version = "0.1.0"
edition = "2018"
rust-version = "1.51"
description = "Crate to automatically test provided examples"
repository = "https://github.com/vidmod/vidmod"
license = "MIT"

[dependencies]
checksums = "0.9.1"
vidmod-core = { version = "0.1.0", path = "../vidmod-core" }
